k8s/admin-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: admin-server
  labels:
    app: admin-server
spec:
  containers:
    - name: admin-server
      image: springcommunity/spring-petclinic-admin-server
      imagePullPolicy: Always
      ports:
        - containerPort: 9090

---
apiVersion: v1
kind: Service
metadata:
  name: admin-server
spec:
  selector:
    app: admin-server
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
