k8s/config-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-server
  labels:
    app: config-server
spec:
  containers:
    - name: config-server
      image: springcommunity/spring-petclinic-config-server
      imagePullPolicy: Always
      ports:
        - containerPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  selector:
    app: config-server
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
