k8s/customers-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: customers-service
  labels:
    app: customers-service
spec:
  containers:
    - name: customers-service
      image: springcommunity/spring-petclinic-customers-service
      imagePullPolicy: Always
      ports:
        - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: customers-service
spec:
  selector:
    app: customers-service
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
