k8s/discovery-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: discovery-server
  labels:
    app: discovery-server
spec:
  containers:
    - name: discovery-server
      image: springcommunity/spring-petclinic-discovery-server
      imagePullPolicy: Always
      ports:
        - containerPort: 8761

---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
spec:
  selector:
    app: discovery-server
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8761
      targetPort: 8761
