k8s/vets-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vets-service
  labels:
    app: vets-service
spec:
  containers:
    - name: vets-service
      image: springcommunity/spring-petclinic-vets-service
      imagePullPolicy: Always
      ports:
        - containerPort: 8083

---
apiVersion: v1
kind: Service
metadata:
  name: vets-service
spec:
  selector:
    app: vets-service
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: 8083
