k8s/visits-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: visits-service
  labels:
    app: visits-service
spec:
  containers:
    - name: visits-service
      image: springcommunity/spring-petclinic-visits-service
      imagePullPolicy: Always
      ports:
        - containerPort: 8083

---
apiVersion: v1
kind: Service
metadata:
  name: visits-service
spec:
  selector:
    app: visits-service
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
