k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  ingressClassName: nginx
  rules:
      - http:
          paths:
          - path: /api/vet/vets
            pathType: Prefix
            backend:
              service:
                name: vets-service
                port:
                  number: 8083
